<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFargment"
    android:background="@color/black"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:boxBackgroundColor="#404343"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:counterOverflowTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:counterOverflowTextColor="@color/white"
        app:counterTextColor="@color/white"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:helperText="You must enter low 15 symbols"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/darker_gray"
        app:hintEnabled="true"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:textInputLayoutFocusedRectEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:boxBackgroundColor="#404343"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/purple_700"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            app:textInputLayoutFocusedRectEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        android:text="@string/sign_in"
        android:backgroundTint="@color/teal_200"
        />


</androidx.constraintlayout.widget.ConstraintLayout>